# vntools

./: .gitignore  Makefile.am  README.md  configure.ac
ARCX/: Makefile  Makefile.in  arcx_unpack.c
basil/: Makefile  Makefile.in  mif_unpack.c  ng3_unpack.c
carriere/: Makefile  Makefile.in  cgd2bmp.c
common/: dir.c  dir.h  readint.h  win32compat.c  writeint.h
cromwell/: Makefile  Makefile.in  opk.c  opk_pack.c  opk_unpack.c  pak_unpack.c  writeint.h
ikura/: Makefile  Makefile.in  ggp_decrypt.c  readbytes.h  sm2mpx10.c  sm2mpx10_pack.c  sm2mpx10_unpack.c
ikura/tests/: SAMPLE
lib/: Makefile.am  Makefile.in  cp932.c  cp932.h  cp932table.c  lzss.c  lzss.h  normalize.c  normalize.h  rgb565.c  rgb565.h  sha1.c  sha1.h  strcasecmp.c  strcasecmp.h  swap.c  swap.h  win32compat.c  win32compat.h  xmkdir.c  xmkdir.h  xprintf.c  xprintf.h
nekopunch/: Makefile  Makefile.in  cp932.h  nekopunch_unpack.c
nekopunch/tests/: test.pak
pinpai/tests/: test.HIZ
silky/: Makefile  Makefile.in  ifl_pack.c  ifl_unpack.c  writeint.h
silky/tests/: test.IFL
studio-sakura/: Makefile  Makefile.in  studio-sakura_unpack.c  win32compat.c
succubus/: Makefile  Makefile.in  succubus_arc_unpack.c
